# parser-generator

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
generators/: lexer_generator.cpp  lexer_generator.h
grammar/: grammar.txt  grammar_analyzer.cpp  grammar_analyzer.h
parser/: fun.cpp  fun.h  fun_parser.h  lexer.cpp  lexer.h  regex_parser.cpp  regex_parser.h  rule.cpp  rule.h  rule_cfg.cpp  rule_cfg.h  rule_parser.cpp  rule_parser.h  rule_utils.h
utils/: utils.cpp  utils.h
